--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
-  <title>Document</title>
+  <title>Marimo Balls</title>
 </head>
 <body>
   
-    <h1>Bolitas flipantes</h1>
+    <h1>Marimo Balls</h1>
 
     <canvas id="canvas" width="1100" height="400" ></canvas>
     <script src="main.js"></script>
